# json-reader

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: deployment.cmake  options.cmake  packages.cmake  targets.cmake  toolchain-defaults.cmake
src/: CMakeLists.txt
src/json-lib/: CMakeLists.txt  document.cxx  document.hxx
src/json-lib/detail/: parser.cxx  parser.hxx  tokenizer.cxx  tokenizer.hxx
tests/: CMakeLists.txt  test-valid.cxx  util-posix.cxx  util-win32.cxx  util.hxx
tests/data/: test-01.json
